# Rust-Caching-Svc

./: .env_sample  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  tomlfmt.toml
src/: main.rs  wakeup.rs
src/requests/: get_variable.rs  mod.rs  service_status.rs  set_variable.rs
src/wrappers/: dotenv_wrapper.rs  mod.rs  redis_wrapper.rs  token_granter_wrapper.rs
