[package]
name = "rust_caching_svc"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
