[package]
name = "rust_caching_svc"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.21"
r2d2_redis = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
